// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`SolidJS Renderer - Dynamic Collections Edge Cases should handle rapid collection updates 1`] = `
"First     
Second    
Fourth    
"
`;

exports[`SolidJS Renderer - Dynamic Collections Collection Transformations should handle sorting collections 1`] = `
"Number: 1 
Number: 1 
Number: 3 
Number: 4 
Number: 5 
"
`;

exports[`SolidJS Renderer - Dynamic Collections Collection Transformations should handle sorting collections 2`] = `
"Number: 5 
Number: 4 
Number: 3 
Number: 1 
Number: 1 
"
`;

exports[`SolidJS Renderer - Dynamic Collections Collection Transformations should handle filtering collections 1`] = `
"Apple (fruit)       
Banana (fruit)      
                    
                    
                    
"
`;
